# Maratona

./: .gitignore  CMakeLists.txt  README.md  Solution.cpp  a.cpp  a2.cpp  checker.cpp  gen.cpp  main  main.cpp  pedras.cpp  template copy.cpp  template.cpp  teste  teste.cpp
AtCoder/Contest 165/: f.cpp
AtCoder/Contest 192/: e.cpp
AtCoder/Contest 319/: a.py  b.cpp  c.cpp  d.cpp  e.cpp
AtCoder/Contest 320/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp
AtCoder/Contest 321/: a.cpp  b.cpp  c.cpp  d.cpp
AtCoder/Contest 322/: b.cpp  c.cpp  e.cpp  f.cpp  f2.cpp
AtCoder/Contest 325/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
AtCoder/Contest 326/: a.cpp  b.cpp  c.cpp  d.cpp
AtCoder/Contest 327/: a.cpp  b.cpp  c.cpp  d.cpp
AtCoder/Contest 328/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
AtCoder/Contest 329/: a.cpp  b.cpp  c.cpp  d.cpp
AtCoder/Contest 330/: b.cpp  c.cpp  d.cpp
AtCoder/Contest 333/: d.cpp
AtCoder/Contest 335/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
AtCoder/Contest 349/: a.cpp  b.cpp  c.cpp
AtCoder/Contest Regular 169/: a.cpp
AtCoder/Divide String/: solution.cpp
AtCoder/Frog 2/: solution.cpp
AtCoder/Frog1/: Solution  Solution.cpp
AtCoder/Grid 1/: solution.cpp
AtCoder/Grouping/: solution.cpp
AtCoder/Independent Set/: solution.cpp
AtCoder/Knapsack 1/: solution.cpp
AtCoder/Knapsack 2/: solution.cpp
AtCoder/LCS/: solution.cpp
AtCoder/Library Practice Contest/: a.cpp
AtCoder/Matching/: solution.cpp
Beecrowd/: Sapo.cpp  fibonacci.cpp  recursivas.cpp
Beecrowd/1025 - Onde está o Mármore/: solution.cpp
Beecrowd/1034-Festival de Estátuas de Gelo/: main.cpp
Beecrowd/1039 - Flores de Fogo/: solution.cpp
Beecrowd/1076 - Desenhando Labirintos/: Solution.cpp
Beecrowd/1084 - Apagando e Ganhando/: solution.cpp
Beecrowd/1088 - Bolhas e Baldes/: solution.cpp
Beecrowd/1093 - Vampiros/: solution.cpp
Beecrowd/1110 - Jogando Cartas Fora/: solution  solution.cpp
Beecrowd/1112 - Schweisen/: solution.cpp
Beecrowd/1123 - Desvio de Rota/: a.cpp  solution.cpp
Beecrowd/1124 -Elevador/: solution.cpp
Beecrowd/1128 -Ir e vir/: solution  solution.cpp
Beecrowd/1162 - Organizador de Vagões/: solution.cpp
Beecrowd/1222 - Concurso de Contos/: solution.cpp
Beecrowd/1237 - Comparação de Substring/: solution.cpp
Beecrowd/1260 - Espécies de Madeira/: solution.cpp
Beecrowd/1261 - Pontos de Feno/: solution.cpp
Beecrowd/1286 - Motoboy/: solution.cpp
Beecrowd/1291 - Sera Isso Integração/: solution.cpp
Contest-Boca/: Pseudo.cpp
Extensão/: Grafo.cpp  grafo.md  sequencia.cpp  subseq.cpp
Fase-Zero/: pedras.cpp
LeetCode/: Solution.cpp  Solution.h
P/: q1.cpp  q2.cpp  q3.cpp  q4.cpp  q5.cpp
UVA/: Trucks.cpp
(+749 files in other folders)
